test/Fail/Issue3431.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Lift (lsuc lzero ⊔ lsuc lzero) (prod (Lift 1ℓ ?0) b)
    = Lift 1ℓ (prod a b)
    : Set₁
    (blocked on _a_74)
  _a_74 =< lsuc lzero (blocked on _a_74)

Issue3431.agda:49.21-49: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue3431.agda:49.21-49
  Issue3431.agda:49.24-28

Issue3431.agda:49.32-36: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue3431.agda:49.32-36
